--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "dev": "vite dev --port 5173",
     "build": "npm run fetch-data && vite build",
     "preview": "vite preview",
-    "test": "npm run test:integration && npm run test:unit",
+    "test": "npm run test:integration",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "test:integration": "playwright test",
-    "test:unit": "vitest",
     "fetch-data": "npx vite-node --options.transformMode.ssr='/.*/' src/lib/scripts/fetchData.ts",
     "seed-data": "npx vite-node --options.transformMode.ssr='/.*/' src/lib/scripts/seedData.ts",
     "prepare": "husky"
@@ -40,8 +39,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.1",
     "vite": "^5.4.6",
-    "vite-node": "^2.0.3",
-    "vitest": "^2.0.3"
+    "vite-node": "^2.0.3"
   },
   "type": "module",
   "dependencies": {
