--- a/package.json
+++ b/package.json
@@ -22,31 +22,31 @@
     "@sveltejs/adapter-auto": "^3.2.2",
     "@sveltejs/kit": "^2.22.5",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
-    "@types/geojson": "^7946.0.14",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
-    "@zerodevx/svelte-toast": "^0.9.5",
-    "eslint": "8.57",
+    "@types/geojson": "^7946.0.16",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@zerodevx/svelte-toast": "^0.9.6",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.43.0",
-    "husky": "^9.1.5",
-    "prettier": "^3.3.3",
-    "prettier-plugin-svelte": "^3.2.6",
+    "eslint-plugin-svelte": "^2.46.1",
+    "husky": "^9.1.7",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
     "supabase": "^1.183.5",
     "svelte": "^4.2.19",
-    "svelte-check": "^3.8.4",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.3",
+    "svelte-check": "^3.8.6",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^7.16.1",
     "vite": "^5.4.6",
     "vite-node": "^2.0.3"
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/apfel-grotezk": "^5.0.11",
+    "@fontsource/apfel-grotezk": "^5.2.5",
     "@supabase/supabase-js": "^2.44.4",
-    "dotenv": "^16.4.5",
-    "maplibre-gl": "^4.5.0"
+    "dotenv": "^16.6.1",
+    "maplibre-gl": "^4.7.1"
   },
   "packageManager": "npm@10.8.1"
 }
