--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite dev --port 5173",
     "build": "npm run seed-data && vite build",
+    "build:vercel": "npm run seed-data && vite build",
     "preview": "vite preview",
     "test": "npm run test:integration",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
