--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "type": "module",
   "dependencies": {
     "@fontsource/apfel-grotezk": "^5.2.5",
+    "@getbrevo/brevo": "^3.0.1",
     "@supabase/supabase-js": "^2.44.4",
     "@sveltejs/adapter-vercel": "^5.8.0",
     "dotenv": "^16.6.1",
